syntax = "proto3";

package Account;

service Account {
    rpc Register(RegisReq) returns (RegisResp) {}
    rpc Login(LoginReq) returns (LoginResp) {}
}

message RegisReq {
    string account = 1;
    string password = 2;
}

message RegisResp {
    string message = 1;
    int32 ueser_id = 2;
}

message LoginReq {
    string account = 1;
    string password = 2;
}

message LoginResp {
    string message = 1;
}